# Logger

./: CMakeLists.txt  README.md  logger.pri
include/Logger/: log.h  logconsole.h  logdetails.h  logdetails.ui  logger.h  logsmodel.h  logsproxymodel.h  logsview.h  manager.h
src/: log.cpp  logconsole.cpp  logconsole.h  logdetails.cpp  logger.cpp  logger.h  logmodel.cpp  logmodel.h  logsmodel.cpp  logsproxymodel.cpp  logsproxymodel.h  logsview.cpp  manager.cpp  objectprofiller.cpp  objectprofiller.h  qmllogmodel.cpp  qmllogmodel.h  showlogdialog.cpp  showlogdialog.h  showlogdialog.ui
